2000-03-23  Jason L Tibbitts III  <tibbs@math.uh.edu>

	* lib/Majordomo.pm: Bump version for snapshot.

	* setup/mta_exim.pl (ask_exim): Set mta_umask as necessary to open
	permissions just a bit.

	* setup/setup_func.pl (create_dirs): Create listdir and ALIASES
	with moreliberal permissions if necessary.

	* lib/Majordomo.pm (sessioninfo): Fix security idiocy in
	sessioninfo command.

2000-03-22  Jason L Tibbitts III  <tibbs@math.uh.edu>

	* lib/Majordomo.pm: Bump version after fix to Dest.pm.

2000-03-22  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Majordomo.pm: Bump version in preparation for snapshot.

2000-03-21  Michael Yount  <csf@moscow.com>

	* Makefile.PL:
	Remove ".pm" from man page names.

	* lib/Mj/Deliver/Dest.pm, lib/Mj/Deliver/Envelope.pm:
	Change handling of failures while issuing RCPT TO commands during
	an SMTP session:  remove the failing address from the list of
	recipients, and place it in a "deferred" array.  Addresses in
	the deferred array are handled after all other recipients, or
	by an explicit call to Mj::Deliver::Dest::flush().

2000-03-17  Michael Yount  <csf@moscow.com>

	* lib/Mj/Archive.pm:
	Make return values consistent.  Instead of returning just the data,
	return an array of list references.  Each list reference contains
	the number of the message, followed by the data for the message.

2000-03-11  Michael Yount  <csf@moscow.com>

	* lib/Mj/Token.pm:
	(t_accept) Use correct variable to determine if a token
	refers to a posted message.

2000-03-10  Brock Rozen <brozen@torah.org>

	* setup/ask_domain.pl:
	Insist on a non-blank master password.

2000-03-10  Sudhakar Chandrasekharan <thaths@netscape.com>

	* setup/ask_basic.pl, lib/Mj/MTAConfig.pm:
	Add support for the Postfix MTA.

	* setup/mta_postfix.pl:
	Ask questions about alias configuration during installation.

	* README.POSTFIX:
	Discuss how to configure Mj2 to work properly with the
	Postfix MTA.

2000-03-07  Darren Stalder  <torin@daft.com>
 
	* lib/Mj/Config.pm